feat: disable USE_FULL_ASSERT and using assert

--- a/source/stm32-cube-ide/tutorial-gtest-stm32.ioc
+++ b/source/stm32-cube-ide/tutorial-gtest-stm32.ioc
@@ -142,7 +142,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446ZETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=true
+ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
